Fix bug where run button would be hidden by colorscheme dropdown if open

--- a/webui/css/config/settings/form.css
+++ b/webui/css/config/settings/form.css
@@ -1,3 +1,9 @@
+.run-btn-container {
+    position: sticky;
+    bottom: 10px;
+    z-index: 2
+}
+
 .pointer-cursor {
     cursor: pointer
 }
