--- a/webui/css/config/settings/input.scss
+++ b/webui/css/config/settings/input.scss
@@ -28,6 +28,7 @@ input[type="submit"][disabled] {
     padding-top: 1rem;
     padding-bottom: 1rem;
     border-radius: 16px;
+    z-index: 2;
 }
 
 /* For tablet sizes and above */
