--- a/webui/css/utilities.css
+++ b/webui/css/utilities.css
@@ -21,8 +21,3 @@
     margin-bottom: 0
 }
 
-.sticky-bottom {
-    position: sticky;
-    bottom: 10px
-}
-
